--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -73,7 +73,7 @@ power off, attach the antenna, then power on.
 1. Open the web browser and download lorapktfwd_v1.1.deb from the
    [Dragino Downloads Site](https://www.dragino.com/downloads/index.php?dir=LoRa_Gateway/PG1301/software/)
 2. Open a terminal window and install the package using dpkg
-   ````
+   ```
    sudo dpkg -i lorapktfwd_v1.1.deb
    ```
 3. Verify lorapktfwd is running using systemctl
@@ -166,9 +166,15 @@ pi@raspberrypi:~/Downloads $
 These steps assume the US915 region. For other regions, replace with your region
 locale configuration in Step 2.
 
-1. Change directory to the /etc/lora-gateway directory: `cd /etc/lora-gateway`
-2. Copy the US915 Band 2 configuration from the cfg subdirectory as
-   global_conf.json: `cp cfg/dragino/global_conf.us915_1.json global_conf.json`
+1. Change directory to the /etc/lora-gateway directory
+   ```
+   cd /etc/lora-gateway
+   ```
+3. Copy the US915 Band 2 configuration from the cfg subdirectory as
+   global_conf.json
+   ```
+   cp cfg/dragino/global_conf.us915_1.json global_conf.json
+   ```
 3. Generate a unique gateway ID based on the MAC address of one of your network 
    interface(s). Use the following bash syntax to help create one.
    ```
@@ -202,7 +208,7 @@ gateway you installed on the Raspberry Pi.
 
 1. Use a text editor and open the /etc/lora-gateway/local_conf.json file
 2. Replace the current value for gateway_ID with (one of) the values generated
-   in the previous step and **append the value 'FFFF' to the end**.  The 
+   in the previous step and **append the value FFFF to the end**.  The 
    reason we append `FFFF` to the end is the gateway ID is required to be
    16 characters, and the unique MAC address generated is only 12.  Again,
    this guarantees your gateway ID will be unique in the network.
