--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -29,9 +29,9 @@ replace it with a brand new one:
 3. Format the new card or re-format the existing card into ExFat format.
 4. Download and install a program to Flash the card such as Etcher, if needed:
    https://www.balena.io/etcher
-5. Download the image file to Flash. Replace the `date` part of the following URL with the latest GA tag in the Community Discord's #announcements channel. 
-    i.e. new date of `2021.09.16.1` and `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/date-sdcard.img.gz` 
-    becomes `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2021.09.16.1-sdcard.img.gz`and enter that url in your browser
+5. Download the image file to Flash. Replace the `date` part of the following URL with the latest GA tagged release in the Community Discord's #announcements channel. 
+    i.e. new firmware date of `2021.10.07.0` and `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/<date>-sdcard.img.gz` 
+    becomes `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2021.10.07.0-sdcard.img.gz`and enter that url in your browser
 6. Unzip the .gz file.
 7. Use Etcher to Flash the newly formatted microSD card with the file.
 8. Place the newly flashed card back into the card reader slot.
