Update Light Hotspot docs
Added table to Light Hotspots page

--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -41,6 +41,11 @@ As all approved Hotspots transition to a Light Hotspot architecture, we also
 introduce a new type of Hotspot known as Data Only Hotspots, **activated as of July 20, 2021**, to satisfy the
 increasing demand and continue to expand network coverage.
 
+| Rewards Type                 | Data Only Hotspots | Full & Light Hotspots |
+| :--------------------------- | :----------------- |:------------- |
+| Network Data Forwarding      | YES                | YES           |
+| Proof of Coverage            | NO                 | YES           |
+
 ## Light Hotspot Properties
 
 When the Light Hotspot Client is fully developed and in production (which
