--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -24,7 +24,7 @@ Since Data Only Hotspots do not earn Proof-of-Coverage rewards, they may be
 permissionlessly added to the blockchain. Once added to the blockchain and
 with location asserted, they will earn $HNT when forwarding network data.
 
-| Rewards Type                 | Data Only Hotspots | Full Hotspots |
+| Rewards Type                 | Data Only Hotspots | Full & Light Hotspots |
 | :--------------------------- | :----------------- |:------------- |
 | Network Data Forwarding      | YES                | YES           |
 | Proof of Coverage            | NO                 | YES           |
