--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -8,7 +8,7 @@ slug: /use-the-network/console/coverage
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Unlike Hotspot monitoring tools focused on maximizing mining rewards, Coverage is built for users of the network who want to have more visibility about which Hotspots are transferring device packets as well as seeing the status of those Hotspots all from within Console.
+Coverage provides visibility for Hotspots that transfer device packets as well as the status of those Hotspots within Console.
 
 :::info
 To learn more about Coverage in Console, check out our Tips & Tricks video [here](https://youtu.be/Woh4RooY6L8).
