Clarify how to add this device to Cayenne
Be explicit that Cayenne does not require a decoder, and explain how to add the device to the correct Helium network for easy integration.

--- a/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
@@ -72,8 +72,24 @@ manual for instructions.
 
 If you would like to easily view your device's data on a web or mobile dashboard
 for free, this device is supported out of the box by myDevices Cayenne via the
-integration on Console. You can learn how to quickly setup this integration
-here.
+integration on Console. 
+
+To add the LHT65 to myDevices Cayenne, you do not need to set up a Decode script
+as described below. Cayenne takes the encoded payload directly and parses the
+temperature and other data elements from it.
+
+Be careful to select **Helium** when adding the LHT65 to Cayenne.
+As described [here](https://docs.mydevices.com/docs/lorawan/helium), select
+<ol>
+  <li>"Add new..."</li>
+  <li>"Device/Widget"</li>
+  <li>"LoRa"</li>
+  <li>"Helium"<li>
+  <li>select Dragino LHT65</li>
+</ol>
+
+On the Helium Console, select `Flow` and directly connect the LHT65 Device to the 
+Cayenne Integration.  Do not use a Decoder.
 
 ### Decode Device Payload
 
