--- a/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
@@ -80,13 +80,11 @@ temperature and other data elements from it.
 
 Be careful to select **Helium** when adding the LHT65 to Cayenne.
 As described [here](https://docs.mydevices.com/docs/lorawan/helium), select
-<ol>
-  <li>"Add new..."</li>
-  <li>"Device/Widget"</li>
-  <li>"LoRa"</li>
-  <li>"Helium"<li>
-  <li>select Dragino LHT65</li>
-</ol>
+1. "Add new..."
+2. "Device/Widget"
+3. "LoRa"
+4. "Helium"
+5. select Dragino LHT65
 
 On the Helium Console, select `Flow` and directly connect the LHT65 Device to the 
 Cayenne Integration.  Do not use a Decoder.
