--- a/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino-lht65.mdx
@@ -72,8 +72,22 @@ manual for instructions.
 
 If you would like to easily view your device's data on a web or mobile dashboard
 for free, this device is supported out of the box by myDevices Cayenne via the
-integration on Console. You can learn how to quickly setup this integration
-here.
+integration on Console. 
+
+To add the LHT65 to myDevices Cayenne, you do not need to set up a Decode script
+as described below. Cayenne takes the encoded payload directly and parses the
+temperature and other data elements from it.
+
+Be careful to select **Helium** when adding the LHT65 to Cayenne.
+As described [here](https://docs.mydevices.com/docs/lorawan/helium), select
+1. "Add new..."
+2. "Device/Widget"
+3. "LoRa"
+4. "Helium"
+5. select Dragino LHT65
+
+On the Helium Console, select `Flow` and directly connect the LHT65 Device to the 
+Cayenne Integration.  Do not use a Decoder.
 
 ### Decode Device Payload
 
