--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -474,7 +474,7 @@ Delete a device label, along with all of its device links.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Body Parameters_
+_Path Parameters_
 
 | Parameter Name      | Type     | Description                              |
 | ------------------- | -------- | ---------------------------------------- |
@@ -611,7 +611,7 @@ _Body Parameters_
 
 | Parameter Name   | Type     | Description   |
 | ---------------- | -------- | ------------- |
-| label (required) | _string_ | UUID of label |
+| label_id (required) | _string_ | UUID of label |
 
 </TabItem>
 <TabItem value="response">
