--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -611,7 +611,7 @@ _Body Parameters_
 
 | Parameter Name   | Type     | Description   |
 | ---------------- | -------- | ------------- |
-| label_id (required) | _string_ | UUID of label |
+| label (required) | _string_ | UUID of label |
 
 </TabItem>
 <TabItem value="response">
