--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -569,11 +569,7 @@ _Path Parameters_
 200: OK
 
 ```json
-{
-  "id": "868ea783-f252-4fc4-b724-a155680c0bc9",
-  "multi_buy": 1,
-  "name": "Blue Label"
-}
+Label deleted
 ```
 
 404: Not Found
