Separate Sheets from other setup
Change header on Sheets section

--- a/docs/use-the-network/devices/ready-to-use/dragino-lds02.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino-lds02.mdx
@@ -177,7 +177,7 @@ right side of the device page. Once you have the Debug window open you can wait
 for the next packet to transmit or force a manual transmission by triggering the sensor with the magnet.
 You will see the LED flash green while it sends a packet to the network.
 
-#### Google Sheets log
+## Google Sheets log
 
 You can also use the Google Sheet integration to map the decoded data to a Form for recording in sheets.
 Create a Google Form with Short Answer questions for
