--- a/docs/use-the-network/console/alerts.mdx
+++ b/docs/use-the-network/console/alerts.mdx
@@ -8,7 +8,7 @@ slug: /use-the-network/console/alerts
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Alerts (email or webhooks) can be configured for a number of conditions related to devices and integrations including when devices are deleted, integrations updated or deleted.
+Alerts (email or webhooks) can be configured for a number of conditions related to devices and integrations including when devices are deleted, or when integrations are updated or deleted.
 
 User types (e.g., Administrator or Managers) can be specified to receive alerts.
 
