--- a/docs/use-the-network/console/alerts.mdx
+++ b/docs/use-the-network/console/alerts.mdx
@@ -28,4 +28,4 @@ To create a new one, select Create New Alert choose a name, alert type (email, w
   )}
 />
 
-**Note:** for webhook alerts obtain a webhook key for authorization, by choosing Organizations from the side menu and copying relevant webhook key.
+**Note:** For webhook alerts, obtain a webhook key for authorization by choosing Organizations from the side menu and copying relevant webhook key.
