--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -29,7 +29,7 @@ For a video walkthrough of configuring ADR and CF List, check out our Tips and T
 
 ## ADR
 
-Adaptive Data Rate or ADR is a mechanism for adapting the data rate of devices
+Adaptive Data Rate (ADR) is a mechanism for adapting the data rate of devices
 in a LoRaWAN network. This allows a device's airtime and power consumption to be
 optimized by the Network Server. Learn more about ADR from Semtech's developer
 portal
