--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -15,7 +15,7 @@ Configuration Profiles provide users with a streamlined way to configure, save, 
 Unlike other configuration settings, Profiles impact LoRAWAN’s protocol behavior and are binary in nature. 
 
 :::important
-Configuration Profiles can be added to device/label nodes. The last Profile assigned to a device takes priority.  For example, if a device has Profile A, and a label has Profile B, if that label is applied to the device then Profile B overrides Profile A. 
+Configuration Profiles can be added to Device/Label nodes. The last Profile assigned to a device takes priority.  For example, if a device has Profile A, and a label has Profile B, if that label is applied to the device then Profile B overrides Profile A. 
 :::
 
 Current settings that can be set via Profiles:
