--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -12,7 +12,7 @@ By default, Data Credits are only charged for uplinks. The Multiple Packets feat
 
 To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
 
-**Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system purchases multiple packets to help ensure successful packet transmission (these cost additional Data Credits and happen automatically). These include: initial joining of the device (up to 5 packets), downlinks that contain data payloads (up to 3 packets). These additional packets help ensure connection reliability to downlink via the Hotspot with the strongest connection.
+**Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system purchases multiple packets to help ensure successful packet transmission (these cost additional Data Credits and happen automatically). These include: initial joining of the device (up to five packets) and downlinks that contain data payloads (up to three packets). These additional packets help ensure connection reliability to downlink via the Hotspot with the strongest connection.
 
 ## Configuring Multiple Packets
 
