tweaking and removing old file

--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -25,7 +25,7 @@ Only Hotspots that have successfully transferred packets are displayed on the Co
 
 `My Hotspots` is a simple way to filter and view only Hotspots users want to see. Select the flag icon next to a Hotspot name for it to appear in the My Hotspots list. 
 
-If a Hotspot has not transferred data but is still of interest, simply navigate to `Hotspot Search` run a search for it and “claim” it. It will appear in the My Hotspots list. 
+If a Hotspot has not transferred data but is still of interest, simply navigate to `Hotspot Search` run a search for it, and it will appear in the My Hotspots list. Users can also use a wallet address and all Hotspots associated with that wallet address will appear.
 
 ## Monitoring Hotspots stats and status
 Coverage displays a number of Hotspots details including Hotspot location, packets transferred, and number of devices that it’s “seen”.
