--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -147,11 +147,11 @@ Approved Hotspots from
 [HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
 lower compute requirements can be added to the network and participate in PoC.
 
-::info
+:::info
 
 HIP-19 Makers: Hardware Audit will commence as soon as early November. Milestone 3 completion is not required for Audit. Please contact MOC for more details.
 
-::
+:::
 
 Onboarding for these Light Hotspots will be done via the standard Helium Wallet
 app onboarding. The fees will be equivalent to other Approved Hotspots ($40 and
