Revert "Merge branch 'helium:master' into patch-4"
This reverts commit 356184595e1a86964013fc4a07bac70aecdb06c4, reversing
changes made to 0b75a05f2dbaa6676212dad3fade524a186bfdd5.

--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -142,7 +142,7 @@ Docker container, and connect D-bus to the Docker container. For example:
  --net host \
  --privileged \
  -v /var/run/dbus:/var/run/dbus \
- --mount type=bind,source=/home/ubuntu/overlay/docker.config,target=/config/sys.config
+ --mount type=bind,source=/home/ubuntu/overlay/docker.config,target=/opt/miner/releases/0.1.0/sys.config
 ```
 
 ## Define the DBus Config
