--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -23,33 +23,19 @@ Console is available as a free to use hosted application at [console.helium.com]
 
 Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo).
 
-### Getting Started
-
 * [Console Quickstart](/use-the-network/console/quickstart)
-
-### Devices
-* [Adding/Importing](/use-the-network/console/adding-devices)
-* [Migrating](/use-the-network/console/migrating-devices)
-* [Grouping](/use-the-network/console/labels)
-
-### Data
-* [Transferring](/use-the-network/console/integrations)
-* [Decoding](/use-the-network/console/functions)
-* [Monitoring Gateways/Hotspots](/use-the-network/console/coverage)
-
-### Configurations
-* [Node Interface (Flows)](/use-the-network/console/flows)
-* [Alerts](/use-the-network/console/alerts)
-* [Multiple Packets](/use-the-network/console/multi-packets)
-* [Configuration Profiles](/use-the-network/console/profiles)
-
-### Admin
+* [Coverage (**New!**)](/use-the-network/console/coverage)
+* [Flows (**New!**)](/use-the-network/console/flows)
 * [Users and Organizations](/use-the-network/console/users)
-* [Data Payment](/use-the-network/console/data-credits)
+* [Data Credits](/use-the-network/console/data-credits)
+* [Adding Devices](/use-the-network/console/adding-devices)
+* [Migrating Devices](/use-the-network/console/migrating-devices)
+* [Labels](/use-the-network/console/labels)
+* [Debug](/use-the-network/console/debug)
+* [Device Configurations](/use-the-network/console/adr)
+* [Functions](/use-the-network/console/functions)
+* [Integrations](/use-the-network/console/integrations)
 * [CLI](/use-the-network/console/cli)
 * [API](/use-the-network/console/api)
 * [Account Security and API Keys](/use-the-network/console/my-account)
-
-### Issues
-* [Debug](/use-the-network/console/debug)
 * [Troubleshooting](/use-the-network/console/troubleshooting)
