--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -53,7 +53,10 @@ Submit a "create OUI" transaction:
 
 The filter is a dummy filter to initialize the OUI. When you get Console
 running, it will automatically maintain it. You can once again track the
-transaction with the endpoint above. When it is complete, you should also see your OUI as the most recently purchased and [on the list here](https://api.helium.io/v1/ouis).
+transaction with the endpoint above. When it is complete, you should also see
+your OUI as the [most recently purchased](https://api.helium.io/v1/ouis/last)
+and on
+[this list here](https://api.helium.io/v1/ouis?cursor=eyJ0eXBlcyI6Im91aV92MSIsImJsb2NrIjo3MDUxMDAsImFuY2hvcl9ibG9jayI6NzA1MTAwf).
 
 Congratulations! You are the proud owner of a Helium Network OUI. OUIs are
 numbered sequentially, so the lower you are, the earlier you were on the
