--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -8,7 +8,7 @@ slug: /use-the-network/console/coverage
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Coverage provides visibility for Hotspots that transfer device packets as well as the status of those Hotspots within Console.
+Unlike Hotspot monitoring tools focused on maximizing mining rewards, Coverage is built for users of the network who want to have more visibility about which Hotspots are transferring device packets as well as seeing the status of those Hotspots all from within Console.
 
 :::info
 To learn more about Coverage in Console, check out our Tips & Tricks video [here](https://youtu.be/Woh4RooY6L8).
@@ -25,7 +25,7 @@ Only Hotspots that have successfully transferred packets are displayed on the Co
 
 `My Hotspots` is a simple way to filter and view only Hotspots users want to see. Select the flag icon next to a Hotspot name for it to appear in the My Hotspots list. 
 
-If a Hotspot has not transferred data but is still of interest, simply navigate to `Hotspot Search` run a search for it, and it will appear in the My Hotspots list. Users can also use a wallet address and all Hotspots associated with that wallet address will appear.
+If a Hotspot has not transferred data but is still of interest, simply navigate to `Hotspot Search` run a search for it and “claim” it. It will appear in the My Hotspots list. 
 
 ## Monitoring Hotspots stats and status
 Coverage displays a number of Hotspots details including Hotspot location, packets transferred, and number of devices that it’s “seen”.
