--- a/docs/use-the-network/console/alerts.mdx
+++ b/docs/use-the-network/console/alerts.mdx
@@ -12,7 +12,9 @@ Alerts (email or webhooks) can be configured for a number of conditions related 
 
 User types (e.g., Administrator or Managers) can be specified to receive alerts.
 
-For a video walkthrough of how to set up Alerts in Console 2.0, check out our Tips & Tricks video [here](https://youtu.be/8zt6W_FCQcM).
+:::info
+For a video walkthrough of how to configure Alerts in Console, check out our Tips & Tricks video [here](https://youtu.be/xv8aM1oNIEs).
+:::
 
 ### Configuring Alerts
 
