--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -13,8 +13,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Self Provisioning Guide for Victor Connected Rodent Control Devices.
 
-The V450 is the "Electronic Mouse Trap", while the V460 is a significantly larger Electronic Rat Trap.
-The only difference is longer/wider tunnel and rail spacing. ("Trap" is a euphemism here.  It does electrocute the rodents that enter the tunnel.)
+The V450 is the "Electronic Mouse Trap", while the V460 is a significantly larger "Electronic Rat Trap".
+The only difference is the longer & wider tunnel and rail spacing. ("Trap" is a euphemism here.  It does electrocute the rodents that enter the tunnel.)
 Both units share the same installation and operation.
 
 <img
@@ -41,7 +41,7 @@ channel on [the Helium Discord Server](https://discord.gg/helium).
 To start, you'll need to create a Helium Console account and add your device.
 
 [B]Your trap vendor should have provided a corresponding `DevEUI`, `AppEUI`, and `AppKey` for each delivered device.[/B]
-Regrettably, these important values are not included anywhere in the box, packaging, or unit labels.
+Regrettably, these important values are not included anywhere in the box, packaging, or unit labeling.
 If you did not receive these key values, you must contact the seller and obtain them before proceeding.
 
 Once you have these three values, follow our
@@ -69,8 +69,8 @@ Once you have added your device to Console, and a login and Site layout on VLINK
 
 #### Create HTTP Integration
 
-For your first trap, create a new HTTP integration in Console. Navigate to the
-Integrations page using the left navigation and then select the HTTP integration.
+For your first trap, create a new HTTP integration in Console.
+Navigate to the Integrations page using the left navigation and then select the HTTP integration.
 
 <img
   src={useBaseUrl(
@@ -93,7 +93,7 @@ Next we'll fill in the details, see instructions and image below.
   )}
 />
 
-#### Create a Flow to connect trap Devices to the Integraion.
+#### Create a Flow to connect trap Devices to the Integration.
 
 On the Helium Console, select Flows.   Add a Node using the Label you assigned your Device.
 Add a node for the _VLINK Integration_ and draw a connecting line from the Label to the Integration.
