Fix bold markers

--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -40,7 +40,7 @@ channel on [the Helium Discord Server](https://discord.gg/helium).
 
 To start, you'll need to create a Helium Console account and add your device.
 
-[B]Your trap vendor should have provided a corresponding `DevEUI`, `AppEUI`, and `AppKey` for each delivered device.[/B]
+**Your trap vendor should have provided a corresponding `DevEUI`, `AppEUI`, and `AppKey` for each delivered device.**
 Regrettably, these important values are not included anywhere in the box, packaging, or unit labeling.
 If you did not receive these key values, you must contact the seller and obtain them before proceeding.
 
