--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -45,7 +45,7 @@ Regrettably, these important values are not included anywhere in the box, packag
 If you did not receive these key values, you must contact the seller and obtain them before proceeding.
 
 Once you have these three values, follow our
-[quick start for instructions](/use-the-network/console/quickstart).
+[quick start for instructions](/use-the-network/console/quickstart.mdx).
 
 Add a Label for your device, so that one shared configuration can be used by any additional devices you install.
 
