--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -53,9 +53,11 @@ Add a Label for your device, so that one shared configuration can be used by any
 Victor has not published the a Payload decoder or data documentation for these traps, so you must use the hosted monitoring solution at Woodstream's victorhq.com.
 
 :::info
+
 You will need an approved login at victorhq.com.
 In some cases, the device seller may have worked with Woodstream to create an account for you at a pre-arranged email address, or you might have to create one and wait for approval to use it.
 There is no way to complete this step yourself, as each new account needs manual approval.
+
 :::
 
 Go to https://vlink.victorpest.com/ and select "Sign In" in the upper-right.  
@@ -102,12 +104,10 @@ The solid line will change to a dotted line to indicate data is flowing.
 ### Add Device to VLINK Platform
 
 You are now ready to add your device to VLINK, using the App or VLINK Portal interface.
-For this step, you will use a (non-Helium) device ID provided by Victor and shown on the QR Sticker inside the trap.
+For this step, you will use a (non-Helium) serial-number provided by Victor and shown on the QR Sticker inside the trap.
 This is likely to be a 15-character identifier that starts with `LM`, entered manually or by QR code.
 
-See VLINK onboarding instructions
-[here](https://helium-docs.s3-us-west-2.amazonaws.com/VLINK_Tunnel_Trap_Setup_Instructions.pdf).
-
+The App will guide the onboarding process and provide instruction for when to turn the device on.  Pause there to set up Console observation.
 
 #### Power up the device
 
