Updated lht65 to match corrected path.

--- a/docs/use-the-network/devices/ready-to-use/dragino/lht65.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/lht65.mdx
@@ -1,8 +1,10 @@
 ---
-id: dragino-lht65
+id: lht65
 hide_title: true
-sidebar_label: Dragino LHT65
-slug: /use-the-network/devices/ready-to-use/dragino-lht65
+sidebar_label: LHT65
+description: LoRaWAN Temperature & Humidity sensor
+image: img/use-the-network/devices/ready-to-use/dragino/lht65.jpg
+slug: /use-the-network/devices/ready-to-use/dragino/lht65
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -11,7 +13,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/dragino-lht65-banner.jpg"
+    "img/use-the-network/devices/ready-to-use/dragino/lht65.jpg"
   )}
 />
 
